# C-C-

./: README.md
Ex1/: CMakeLists.txt  README.md  cipher.c  main.c
Ex2/: CMakeLists.txt  ProductBST.c  ProductBST.h  README.md  patch to paste in ProductBST.c  presubmit.c
Ex3 - Part B/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp
Ex3 - part A/: CMakeLists.txt  README.md  linked_list.c  markov_chain.c  markov_chain.h  tweets_generator.c
Ex3 - part B/: CMakeLists.txt  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
